test3/TestParser.js
// Generated from ./Test.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from './antlr4.js';
import TestListener from './TestListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class TestParser extends antlr4.Parser {

    static grammarFileName = "Test.g4";
    static literalNames = [ null, "'/*'", "'*/'" ];
    static symbolicNames = [ null, null, null, "CommentProperty", "CommentPropertyText", 
                             "NL" ];
    static ruleNames = [ "commentBlock", "commentBlockContents" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TestParser.ruleNames;
        this.literalNames = TestParser.literalNames;
        this.symbolicNames = TestParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 0:
    	    		return this.commentBlock_sempred(localctx, predIndex);
    	case 1:
    	    		return this.commentBlockContents_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    commentBlock_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    commentBlockContents_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };



	commentBlock(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new CommentBlockContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 0;
	    this.enterRecursionRule(localctx, 0, TestParser.RULE_commentBlock, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 5;
	        this.match(TestParser.T__0);
	        this.state = 6;
	        this.commentBlockContents(0);
	        this.state = 7;
	        this.match(TestParser.T__1);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 13;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new CommentBlockContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, TestParser.RULE_commentBlock);
	                this.state = 9;
	                if (!( this.precpred(this._ctx, 1))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                }
	                this.state = 10;
	                this.match(TestParser.NL); 
	            }
	            this.state = 15;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	commentBlockContents(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new CommentBlockContentsContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 2;
	    this.enterRecursionRule(localctx, 2, TestParser.RULE_commentBlockContents, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 20;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 17;
	                this.matchWildcard(); 
	            }
	            this.state = 22;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	        }

	        this.state = 25;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        if(la_===1) {
	            this.state = 23;
	            this.match(TestParser.CommentProperty);
	            this.state = 24;
	            this.match(TestParser.CommentPropertyText);

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 32;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new CommentBlockContentsContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, TestParser.RULE_commentBlockContents);
	                this.state = 27;
	                if (!( this.precpred(this._ctx, 1))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                }
	                this.state = 28;
	                this.match(TestParser.NL);
	                this.state = 29;
	                this.commentBlockContents(2); 
	            }
	            this.state = 34;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


}

TestParser.EOF = antlr4.Token.EOF;
TestParser.T__0 = 1;
TestParser.T__1 = 2;
TestParser.CommentProperty = 3;
TestParser.CommentPropertyText = 4;
TestParser.NL = 5;

TestParser.RULE_commentBlock = 0;
TestParser.RULE_commentBlockContents = 1;

class CommentBlockContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestParser.RULE_commentBlock;
    }

	commentBlockContents() {
	    return this.getTypedRuleContext(CommentBlockContentsContext,0);
	};

	commentBlock() {
	    return this.getTypedRuleContext(CommentBlockContext,0);
	};

	NL() {
	    return this.getToken(TestParser.NL, 0);
	};

	enterRule(listener) {
	    if(listener instanceof TestListener ) {
	        listener.enterCommentBlock(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestListener ) {
	        listener.exitCommentBlock(this);
		}
	}


}



class CommentBlockContentsContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = TestParser.RULE_commentBlockContents;
    }

	CommentProperty() {
	    return this.getToken(TestParser.CommentProperty, 0);
	};

	CommentPropertyText() {
	    return this.getToken(TestParser.CommentPropertyText, 0);
	};

	commentBlockContents = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CommentBlockContentsContext);
	    } else {
	        return this.getTypedRuleContext(CommentBlockContentsContext,i);
	    }
	};

	NL() {
	    return this.getToken(TestParser.NL, 0);
	};

	enterRule(listener) {
	    if(listener instanceof TestListener ) {
	        listener.enterCommentBlockContents(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof TestListener ) {
	        listener.exitCommentBlockContents(this);
		}
	}


}




TestParser.CommentBlockContext = CommentBlockContext; 
TestParser.CommentBlockContentsContext = CommentBlockContentsContext; 
